--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.0.2",
